--- a/Translations/German/text-memory-change.xml
+++ b/Translations/German/text-memory-change.xml
@@ -1863,11 +1863,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYCHARACTER_TRUSTED</zType>
-		<Translation>Trusted me</Translation>
+		<Translation>Hat mir vertraut</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYFAMILY_FOUNDED_CITY</zType>
-		<Translation>Founded a City for us</Translation>
+		<Translation>Hat ine Stadt für uns gegründet</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYFAMILY_FOUNDED_FAMILY_SEAT</zType>
