--- a/Translations/German/text-tribe-change.xml
+++ b/Translations/German/text-tribe-change.xml
@@ -8,7 +8,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_REBELS</zType>
-		<Translation>Rebellen~Rebelle~Rebellen</Translation>
+		<Translation>Rebellen~Rebellieren~ein Rebelle~Rebellen~Rebelle</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_ANARCHY</zType>
@@ -16,15 +16,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_RAIDERS</zType>
-		<Translation>Räuber~Räuber~Räuber</Translation>
+		<Translation>Räuber~Räubern~ein Räuber~Räuber~Räuber</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_BARBARIANS</zType>
-		<Translation>Barbaren~Barbare~Barbaren</Translation>
+		<Translation>Barbaren~Barbarisch~ein Barbare~Barbaren~Barbare</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_GAULS</zType>
-		<Translation>Gallier~Gallier~Gallier</Translation>
+		<Translation>Gallier~Gallisch~ein Gallier~Gallier~Gallier</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_GAULS_NICK</zType>
@@ -32,7 +32,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_VANDALS</zType>
-		<Translation>Vandalen~Vandale~Vandalen</Translation>
+		<Translation>Vandalen~Vandalisch~ein Vandale~Vandalen~Vandale</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_VANDALS_NICK</zType>
@@ -40,7 +40,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_DANES</zType>
-		<Translation>Dänen~Däne~Dänen</Translation>
+		<Translation>Dänen~Dänisch~ein Däne~Dänen~Däne</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_DANES_NICK</zType>
@@ -48,7 +48,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_THRACIANS</zType>
-		<Translation>Thraker~Thraker~Thraker</Translation>
+		<Translation>Thraker~Thrakisch~ein Thraker~Thraker~Thraker</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_THRACIANS_NICK</zType>
@@ -56,7 +56,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_SCYTHIANS</zType>
-		<Translation>Skythen~Skythe~Skythen</Translation>
+		<Translation>Skythen~Skythisch~ein Skythe~Skythen~Skythe</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_SCYTHIANS_NICK</zType>
@@ -64,7 +64,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_NUMIDIANS</zType>
-		<Translation>Numiden~Numide~Numiden</Translation>
+		<Translation>Numiden~Numidisch~ein Numide~Numiden~Numide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_NUMIDIANS_NICK</zType>
