--- a/Translations/German/text-nation-change.xml
+++ b/Translations/German/text-nation-change.xml
@@ -9,30 +9,30 @@
 	<Entry>
 		<zType>TEXT_NATION_ASSYRIA</zType>
 		
-		<Translation>Assyrien~Assyrische~ein Assyrer~Assyrer</Translation>
+		<Translation>Assyrien~Assyrisch~ein Assyrer~Assyrer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_BABYLONIA</zType>
-		<Translation>Babylonien~Babylonische~ein Babylonier~Babylonier</Translation>
+		<Translation>Babylonien~Babylonisch~ein Babylonier~Babylonier</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_CARTHAGE</zType>
-		<Translation>Karthago~Karthagische~ein Karthager~Karthager</Translation>
+		<Translation>Karthago~Karthagisch~ein Karthager~Karthager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_EGYPT</zType>
-		<Translation>Ägypten~Ägyptische~ein Ägypter~Ägypter</Translation>
+		<Translation>Ägypten~Ägyptisch~ein Ägypter~Ägypter</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_GREECE</zType>
-		<Translation>Griechenland~Griechische~ein Grieche~Griechen</Translation>
+		<Translation>Griechenland~Griechisch~ein Grieche~Griechen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_PERSIA</zType>
-		<Translation>Persien~Persische~a Perser~Perser</Translation>
+		<Translation>Persien~Persisch~a Perser~Perser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_ROME</zType>
-		<Translation>Rom~Römische~ein Römer~Römer</Translation>
+		<Translation>Rom~Römisch~ein Römer~Römer</Translation>
 	</Entry>
 </Root>
