--- a/Translations/German/text-religion-change.xml
+++ b/Translations/German/text-religion-change.xml
@@ -8,51 +8,51 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_ZOROASTRIANISM</zType>
-		<Translation>Zoroastrismus~Zoroastrisch~ein Zoroastrier~Zoroastrier~Zoroastrier</Translation>
+		<Translation>Zoroastrismus~Zoroastrische~ein Zoroastrier~Zoroastrier~Zoroastrier</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_JUDAISM</zType>
-		<Translation>Judentum~Jüdisch~ein Jude~Juden~Jude</Translation>
+		<Translation>Judentum~Jüdische~ein Jude~Juden~Jude</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_CHRISTIANITY</zType>
-		<Translation>Christentum~Christlich~ein Christ~Christen~Christ</Translation>
+		<Translation>Christentum~Christliche~ein Christ~Christen~Christ</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_MANICHAEISM</zType>
-		<Translation>Manichäismus~Manichäisch~ein Manichäer~Manichäer~Manichäer</Translation>
+		<Translation>Manichäismus~Manichäische~ein Manichäer~Manichäer~Manichäer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN</zType>
-		<Translation>Heidentum~Heidnisch~ein Heide~Heiden~Heide</Translation>
+		<Translation>Heidentum~Heidnische~ein Heide~Heiden~Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_ASSYRIA</zType>
-		<Translation>Assyrisches Heidentum~Assyrisch Heidnisch~ein Assyrischer Heide~Assyrische Heiden~Assyrischer Heide</Translation>
+		<Translation>Assyrisches Heidentum~Assyrisch Heidnische~ein Assyrischer Heide~Assyrische Heiden~Assyrischer Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_BABYLONIA</zType>
-		<Translation>Babylonisches Heidentum~Babylonisch Heidnisch~ein Babylonischer Heide~Babylonische Heiden~Babylonischer Heide</Translation>
+		<Translation>Babylonisches Heidentum~Babylonisch Heidnische~ein Babylonischer Heide~Babylonische Heiden~Babylonischer Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_CARTHAGE</zType>
-		<Translation>Karthagisches Heidentum~Karthagisch Heidnisch~ein Karthagischer Heide~Karthagische Heiden~Karthagischer Heide</Translation>
+		<Translation>Karthagisches Heidentum~Karthagisch Heidnische~ein Karthagischer Heide~Karthagische Heiden~Karthagischer Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_EGYPT</zType>
-		<Translation>Ägyptisches Heidentum~Ägyptisch Heidnisch~ein Ägyptischer Heide~Ägyptische Heiden~Ägyptischer</Translation>
+		<Translation>Ägyptisches Heidentum~Ägyptisch Heidnische~ein Ägyptischer Heide~Ägyptische Heiden~Ägyptischer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_GREECE</zType>
-		<Translation>Griechisches Heidentum~Griechisch Heidnisch~ein Griechischer Heide~Griechische Heiden~Griechischer Heide</Translation>
+		<Translation>Griechisches Heidentum~Griechisch Heidnische~ein Griechischer Heide~Griechische Heiden~Griechischer Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_ROME</zType>
-		<Translation>Römisches Heidentum~Römisch Heidnisch~ein Römischer Heide~Römische Heiden~Römischer Heide</Translation>
+		<Translation>Römisches Heidentum~Römisch Heidnische~ein Römischer Heide~Römische Heiden~Römischer Heide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_PAGAN_PERSIA</zType>
-		<Translation>Persisches Heidentum~Persisch Heidnisch~ein Persischer Heide~Persian Persischer Heide</Translation>
+		<Translation>Persisches Heidentum~Persisch Heidnische~ein Persischer Heide~Persian Persischer Heide</Translation>
 	</Entry>
   <Entry>
 		<zType>TEXT_RELIGION_CUSTOM</zType>
