--- a/Translations/German/text-improvementClass-change.xml
+++ b/Translations/German/text-improvementClass-change.xml
@@ -33,7 +33,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_CAMP</zType>
-		<Translation>Lager~ein Lager~Lagern</Translation>
+		<Translation>Lager~ein Lager~Lager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_GROVE</zType>
@@ -57,7 +57,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_HAMLET</zType>
-		<Translation>Dorf~ein Dorf~Dörfern</Translation>
+		<Translation>Dorf~ein Dorf~Dörfer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_BARRACKS</zType>
@@ -65,19 +65,19 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_RANGE</zType>
-		<Translation>Schießstand~ein Schießstand~Schießständen</Translation>
+		<Translation>Schießstand~ein Schießstand~Schießstände</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_ODEON</zType>
-		<Translation>Theater~eine Theater~Theatern</Translation>
+		<Translation>Theater~eine Theater~Theater</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_BATHS</zType>
-		<Translation>Badehaus~ein Badehaus~Badehäusern</Translation>
+		<Translation>Badehaus~ein Badehaus~Badehäuser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_MARKET</zType>
-		<Translation>Markt~ein Markt~Märkten</Translation>
+		<Translation>Markt~ein Markt~Märkte</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_LIBRARY</zType>
@@ -85,7 +85,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_COURTHOUSE</zType>
-		<Translation>Gerichtshof~ein Gerichtshof~Gerichtshöfen</Translation>
+		<Translation>Gerichtshof~ein Gerichtshof~Gerichtshöfe</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_GARRISON</zType>
@@ -93,11 +93,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_SHRINE</zType>
-		<Translation>Heiligtum~ein Heiligtum~Heiligtümern</Translation>
+		<Translation>Heiligtum~ein Heiligtum~Heiligtümer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_MONASTERY</zType>
-		<Translation>Kloster~ein Kloster~Klöstern</Translation>
+		<Translation>Kloster~ein Kloster~Klöster</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_MONASTERY_CUSTOM</zType>
