--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -671,7 +671,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CONTACT_THE_INJURED_PLAYER_TITLE</zType>
-		<Translation>Verwundet {PLAYER-0,1}</Translation>
+		<Translation>{PLAYER-0,1} Verwundet</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CONTACT_POLITICAL_PRISONER_TITLE</zType>
@@ -807,7 +807,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRIBE_TRUCE_OFFER_TITLE</zType>
-		<Translation>Barbaren link(DIPLOMACY_TRUCE Angebot</Translation>
+		<Translation>Barbaren link(DIPLOMACY_TRUCE) Angebot</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRIBE_RAID_UPSET_TITLE</zType>
