--- a/Translations/German/text-tribe-change.xml
+++ b/Translations/German/text-tribe-change.xml
@@ -24,7 +24,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_GAULS</zType>
-		<Translation>Gallier~Gallische~ein Gallier~Gallier~Gallier</Translation>
+		<Translation>Gallier~Gallische~ein Gallier~Galliern~Gallier</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_GAULS_NICK</zType>
