--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,8 +5,8 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan (aka. ShadowDuke)</author>
   <modioID>143281</modioID>
-  <modioFileID>1307191</modioFileID>
-  <modversion>1.18</modversion>
+  <modioFileID>1307526</modioFileID>
+  <modversion>1.18c</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
