renamed Bauwesen to Baukunst
. typo fixed

--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1945,7 +1945,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TECH_ARCHITECTURE</zType>
-		<Translation>Bauwesen</Translation>
+		<Translation>Baukunst</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TECH_ARCHITECTURE_BONUS_CIVICS</zType>
@@ -2061,7 +2061,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TECH_MILITARY_PRESTIGE</zType>
-		<Translation>Militärisches Ansehene</Translation>
+		<Translation>Militärisches Ansehen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TECH_INDUSTRIAL_PROGRESS</zType>
