--- a/Translations/German/text-eventStory-change.xml
+++ b/Translations/German/text-eventStory-change.xml
@@ -542,4 +542,10 @@ The court meets you with bowed heads, and the gathered crowds greet you with a c
 
 Congratulations.</Translation>
 	</Entry>
+	<Entry>
+		<zType>TEXT_EVENTSTORY_RUINS_STRANGE_SCROLL</zType>
+		<Translation>Versiegelt in einer muffigen Gruft, umgeben von seltsamen Zeichen und Siegeln, entdecken unsere Späher eine uralte, aber erstaunlich gut erhaltene Schriftrolle. Da sie diese für beunruhigend halten, bringen sie sie zu dir, um sie zu beurteilen.
+
+Die Schrift ist zwar in einer unbekannten Sprache, aber seltsam einfach. Man hat das Gefühl, dass man sie schnell lernen könnte, wenn man sich etwas Zeit dafür nimmt.</Translation>
+	</Entry>
 </Root>
