TEXT_BONUS_EVENTOPTION_RUINS_STRANGE_SCROLL_DESTROY

--- a/Translations/German/text-bonus-change.xml
+++ b/Translations/German/text-bonus-change.xml
@@ -608,7 +608,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RUINS_STRANGE_SCROLL_DESTROY</zType>
-		<Translation>Destroyed a strange and dangerous scroll</Translation>
+		<Translation>Zerstörte eine seltsame und gefährliche Schriftrolle</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RUINS_COMET_SIGHTED_OMEN</zType>
